vlib/v/checker/tests/static_fn_call_no_struct_decl_err.out
vlib/v/checker/tests/static_fn_call_no_struct_decl_err.vv:2:2: error: unknown type `Mystery`
    1 | fn main() {
    2 |     Mystery.hey()
      |     ~~~~~~~
    3 | }
    4 |
